tests/base/parser/bad/cmodule-transition-id-lparen-rparen-end-with.scilla
scilla_version 0

contract Test
()

transition something ()
end

(* Typo *)
transsition something_else ()
end
